--- a/poster/decision-problems-for-invertible-automata.tex
+++ b/poster/decision-problems-for-invertible-automata.tex
@@ -191,8 +191,8 @@ semigroups.
 \end{definition}
 
 \begin{theorem}
-  Automorphism \decprob{Membership} in $S(\B)$ for an Abelian
-  automaton $\B$ is decidable.
+  Automorphism \decprob{Membership} in $S(\B)$ is decidable for an Abelian
+  automaton $\B$.
 \end{theorem}
 
 % \begin{proofsketch}
